Add favicon and fix error

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="PCOS detection platform for women" />
     <meta name="author" content="Maria" />
 
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
   </head>
 
   <body>
